syntax = "proto3";

package grpc;

// Categories CRUD
service CategoryService {
  rpc CreateCategoryRPC (CategoryInput) returns (CategoryResponse) {}
  rpc ReadCategoryRPC (ID) returns (Category) {}
  rpc UpdateCategoryRPC (CategoryInput) returns (CategoryResponse) {}
  rpc DeleteCategoryRPC (ID) returns (CategoryResponse) {}
  rpc ListCategoriesRPC (ListCategoriesRequest) returns (ListCategoriesResponse) {}
}
// Items CRUD
service ItemService {
  rpc CreateItemRPC (ItemInput) returns (ItemResponse) {}
  rpc ReadItemRPC (ID) returns (Item) {}
  rpc UpdateItemRPC (ItemInput) returns (ItemResponse) {}
  rpc DeleteItemRPC (ID) returns (ItemResponse) {}
  rpc ListItemsRPC (ListItemsRequest) returns (ListItemsResponse) {}
}

message Category {
  uint64 id = 1;
  string name = 2;
}
message Item {
  uint64 id = 1;
  string name = 2;
}


message CategoryInput {
  string name = 1;
}
message ItemInput {
  string name = 1;
}


message CategoryResponse {
  uint64 id = 1;
}
message ItemResponse {
  uint64 id = 1;
}


message ListCategoriesRequest {}
message ListItemsRequest {}

message ListCategoriesResponse {
  repeated Category categories = 1;
}
message ListItemsResponse {
  repeated Item items = 1;
}

message ID {
  uint64 id = 1;
}